--- a/package.json
+++ b/package.json
@@ -6,15 +6,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma:generate": "npx dotenv -e .env.local -- prisma generate",
+    "migrate:dev": "npx dotenv -e .env.local -- prisma migrate dev",
+    "prisma:studio": "npx dotenv -e .env.local -- prisma studio",
+    "migrate": "npx dotenv -e .env.local -- prisma migrate deploy"
   },
   "dependencies": {
     "@nextui-org/button": "^2.0.26",
     "@nextui-org/react": "^2.2.9",
+    "@prisma/client": "^5.8.1",
     "framer-motion": "^10.18.0",
     "next": "14.0.4",
     "react": "^18",
+    "react-canvas-confetti": "^2.0.5",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "zod": "^3.22.4"
   },
@@ -23,7 +30,9 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "dotenv-cli": "^7.3.0",
     "postcss": "^8",
+    "prisma": "^5.8.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
