--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nextui-org/button": "^2.0.26",
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.8.1",
+    "@vercel/analytics": "^1.1.2",
     "framer-motion": "^10.18.0",
     "next": "14.0.4",
     "react": "^18",
